--- a/Source/Engine/CMakeLists.txt
+++ b/Source/Engine/CMakeLists.txt
@@ -30,14 +30,16 @@ set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 # MSVC is a preferable compiler
 if (MSVC)
-	target_compile_options(${PROJECT_NAME} PUBLIC /fp:fast /GA /MP /TP /Ot )
 	# Can't set /W4 directly without getting a heck lot of warnings
 	string(REGEX REPLACE "/W[1-3]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-	string(REGEX REPLACE "[/|-]RTC(su|[1su])" "/O2" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-elseif (CLANG) # Add Clang specific compiler flag
-	target_compile_options(${PROJECT_NAME} PUBLIC -W4 -fp:fast -GA -MP -TP -fexceptions)
+	string(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
+	target_compile_options(${PROJECT_NAME} PRIVATE /fp:fast /GA /MP /TP /O2 /Ot)
+elseif (${CMAKE_CXX_COMPILER_ID} MATCHES "CLANG") # Add Clang specific compiler flag
+	target_compile_options(${PROJECT_NAME} PRIVATE -W4 -fp:fast -GA -MP -TP -fexceptions)
 endif()
 
+message("Compile flags: " ${CMAKE_CXX_FLAGS})
+message("Compile debug flags: " ${CMAKE_CXX_FLAGS_DEBUG})
 find_package(assimp CONFIG REQUIRED)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
