--- a/Source/LowerDeck/CMakeLists.txt
+++ b/Source/LowerDeck/CMakeLists.txt
@@ -11,10 +11,11 @@ target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
 if (MSVC)
 	# Can't set /W4 directly without getting a heck lot of warnings
 	string(REGEX REPLACE "/W[1-3]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+	# In order to properly set O2 and Ot flags RTC must be disabled
 	string(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
 	target_compile_options(${PROJECT_NAME} PRIVATE /fp:fast /GA /MP /TP /O2 /Ot)
 elseif (CLANG) # Add Clang specific compiler flag
-	target_compile_options(${PROJECT_NAME} PUBLIC -W4 -fp:fast -GA -MP -TP -fexceptions)
+	target_compile_options(${PROJECT_NAME} PUBLIC -W4 -fp:fast -GA -MP -TP -O2 -Ot -fexceptions)
 endif()
 
 # Native Win32 window
@@ -42,7 +43,7 @@ add_custom_command(TARGET LowerDeck PRE_BUILD
 	COMMENT "Copying shaders..."
 )
 
-add_custom_command(TARGET LowerDeck POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SOURCE_DIR}/Assets ${COPY_DESTINATION}/Assets
-	COMMENT "Copying assets..."
-)
+#add_custom_command(TARGET LowerDeck POST_BUILD
+#    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SOURCE_DIR}/Assets ${COPY_DESTINATION}/Assets#
+	#COMMENT "Copying assets..."
+#)
