A bunch of very minor changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@
 cmake_minimum_required (VERSION 3.5.0)
 project("Lower Deck Engine")
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
 add_definitions(-DUNICODE -D_UNICODE -DNOMINMAX)
 add_definitions(-DRHI_D3D12)
 
